src/query/functions/tests/it/scalars/testdata/tuple.txt
ast            : (NULL,)
raw expr       : tuple(NULL)
checked expr   : tuple<NULL>(NULL)
optimized expr : (NULL,)
output type    : Tuple(NULL,)
output domain  : ({NULL})
output         : (NULL,)


ast            : (NULL, NULL)
raw expr       : tuple(NULL, NULL)
checked expr   : tuple<NULL, NULL>(NULL, NULL)
optimized expr : (NULL, NULL)
output type    : Tuple(NULL, NULL)
output domain  : ({NULL}, {NULL})
output         : (NULL, NULL)


ast            : (1, 2, 'a')
raw expr       : tuple(1, 2, 'a')
checked expr   : tuple<UInt8, UInt8, String>(1_u8, 2_u8, "a")
optimized expr : (1_u8, 2_u8, "a")
output type    : Tuple(UInt8, UInt8, String)
output domain  : ({1..=1}, {2..=2}, {"a"..="a"})
output         : (1, 2, 'a')


ast            : (1, 2, ('a', 'b'))
raw expr       : tuple(1, 2, tuple('a', 'b'))
checked expr   : tuple<UInt8, UInt8, Tuple(String, String)>(1_u8, 2_u8, tuple<String, String>("a", "b"))
optimized expr : (1_u8, 2_u8, ("a", "b"))
output type    : Tuple(UInt8, UInt8, Tuple(String, String))
output domain  : ({1..=1}, {2..=2}, ({"a"..="a"}, {"b"..="b"}))
output         : (1, 2, ('a', 'b'))


ast            : (s, s)
raw expr       : tuple(s::String NULL, s::String NULL)
checked expr   : tuple<String NULL, String NULL>(s, s)
evaluation:
+--------+----------------------+----------------------------------------------+
|        | s                    | Output                                       |
+--------+----------------------+----------------------------------------------+
| Type   | String NULL          | Tuple(String NULL, String NULL)              |
| Domain | {"a"..="d"} ∪ {NULL} | ({"a"..="d"} ∪ {NULL}, {"a"..="d"} ∪ {NULL}) |
| Row 0  | 'a'                  | ('a', 'a')                                   |
| Row 1  | 'b'                  | ('b', 'b')                                   |
| Row 2  | NULL                 | (NULL, NULL)                                 |
| Row 3  | 'd'                  | ('d', 'd')                                   |
+--------+----------------------+----------------------------------------------+
evaluation (internal):
+--------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Column | Data                                                                                                                                                              |
+--------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| s      | NullableColumn { column: StringColumn[a, b, c, d], validity: [0b____1011] }                                                                                       |
| Output | Tuple([NullableColumn { column: StringColumn[a, b, c, d], validity: [0b____1011] }, NullableColumn { column: StringColumn[a, b, c, d], validity: [0b____1011] }]) |
+--------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------+


error: 
  --> SQL:1:1
  |
1 | get((NULL,))
  | ^^^^^^^^^^^^ no function matches signature `get(Tuple(NULL,))`, you might need to add explicit type casts.



error: 
  --> SQL:1:8
  |
1 | (NULL,).0
  |        ^^ no function matches signature `get(0)(Tuple(NULL,))`, you might need to add explicit type casts.



ast            : (NULL,).1
raw expr       : get(1)(tuple(NULL))
checked expr   : get<T0=NULL><Tuple(T0,)>(1)(tuple<NULL>(NULL))
optimized expr : NULL
output type    : NULL
output domain  : {NULL}
output         : NULL


error: 
  --> SQL:1:8
  |
1 | (NULL,).2
  |        ^^ no function matches signature `get(2)(Tuple(NULL,))`, you might need to add explicit type casts.



ast            : (1, 'a').1
raw expr       : get(1)(tuple(1, 'a'))
checked expr   : get<T0=UInt8, T1=String><Tuple(T0, T1)>(1)(tuple<UInt8, String>(1_u8, "a"))
optimized expr : 1_u8
output type    : UInt8
output domain  : {1..=1}
output         : 1


ast            : (1, 'a').2
raw expr       : get(2)(tuple(1, 'a'))
checked expr   : get<T0=UInt8, T1=String><Tuple(T0, T1)>(2)(tuple<UInt8, String>(1_u8, "a"))
optimized expr : "a"
output type    : String
output domain  : {"a"..="a"}
output         : 'a'


ast            : (1, 2, ('a', 'b')).3
raw expr       : get(3)(tuple(1, 2, tuple('a', 'b')))
checked expr   : get<T0=UInt8, T1=UInt8, T2=Tuple(String, String)><Tuple(T0, T1, T2)>(3)(tuple<UInt8, UInt8, Tuple(String, String)>(1_u8, 2_u8, tuple<String, String>("a", "b")))
optimized expr : ("a", "b")
output type    : Tuple(String, String)
output domain  : ({"a"..="a"}, {"b"..="b"})
output         : ('a', 'b')


ast            : (1, 2, ('a', 'b')).3.1
raw expr       : get(1)(get(3)(tuple(1, 2, tuple('a', 'b'))))
checked expr   : get<T0=String, T1=String><Tuple(T0, T1)>(1)(get<T0=UInt8, T1=UInt8, T2=Tuple(String, String)><Tuple(T0, T1, T2)>(3)(tuple<UInt8, UInt8, Tuple(String, String)>(1_u8, 2_u8, tuple<String, String>("a", "b"))))
optimized expr : "a"
output type    : String
output domain  : {"a"..="a"}
output         : 'a'


ast            : (s, s).1
raw expr       : get(1)(tuple(s::String NULL, s::String NULL))
checked expr   : get<T0=String NULL, T1=String NULL><Tuple(T0, T1)>(1)(tuple<String NULL, String NULL>(s, s))
evaluation:
+--------+----------------------+----------------------+
|        | s                    | Output               |
+--------+----------------------+----------------------+
| Type   | String NULL          | String NULL          |
| Domain | {"a"..="d"} ∪ {NULL} | {"a"..="d"} ∪ {NULL} |
| Row 0  | 'a'                  | 'a'                  |
| Row 1  | 'b'                  | 'b'                  |
| Row 2  | NULL                 | NULL                 |
| Row 3  | 'd'                  | 'd'                  |
+--------+----------------------+----------------------+
evaluation (internal):
+--------+-----------------------------------------------------------------------------+
| Column | Data                                                                        |
+--------+-----------------------------------------------------------------------------+
| s      | NullableColumn { column: StringColumn[a, b, c, d], validity: [0b____1011] } |
| Output | NullableColumn { column: StringColumn[a, b, c, d], validity: [0b____1011] } |
+--------+-----------------------------------------------------------------------------+


ast            : col.1
raw expr       : get(1)(col::Tuple(String NULL,) NULL)
checked expr   : get<T0=String><Tuple(T0 NULL,) NULL>(1)(col)
evaluation:
+--------+---------------------------------+----------------------+
|        | col                             | Output               |
+--------+---------------------------------+----------------------+
| Type   | Tuple(String NULL,) NULL        | String NULL          |
| Domain | ({"a"..="d"} ∪ {NULL}) ∪ {NULL} | {"a"..="d"} ∪ {NULL} |
| Row 0  | ('a',)                          | 'a'                  |
| Row 1  | NULL                            | NULL                 |
| Row 2  | (NULL,)                         | NULL                 |
| Row 3  | NULL                            | NULL                 |
+--------+---------------------------------+----------------------+
evaluation (internal):
+--------+-----------------------------------------------------------------------------------------------------------------------------------------+
| Column | Data                                                                                                                                    |
+--------+-----------------------------------------------------------------------------------------------------------------------------------------+
| col    | NullableColumn { column: Tuple([NullableColumn { column: StringColumn[a, b, c, d], validity: [0b____0011] }]), validity: [0b____0101] } |
| Output | NullableColumn { column: StringColumn[a, b, c, d], validity: [0b____0001] }                                                             |
+--------+-----------------------------------------------------------------------------------------------------------------------------------------+


